[project]
name = "fastapi-projects"
version = "0.1.0"
description = "FastAPI Projects"
authors = [
    {name = "Vinícius Ramos"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "bcrypt (==4.0.1)",
    "cryptography (>=45.0.3,<46.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

